--- a/index.html
+++ b/index.html
@@ -323,11 +323,12 @@
             <hr>
             <!-- Fecha de actualización -->
             <div class="row">
-                <div class="col-md-12 text-right">
-                    <p id="fecha_pie">Sitio actualizado al: 09/01/2025</p>
+                <div id="last-updated">
+                    Última vez actualizado: <span id="update-time"></span>
                 </div>
             </div>
         </div>
+        <script src="../../../actualizador.js"></script>
     </footer>
     
 </body>
