--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
                 </div>
             </div>
         </div>
-        <script src="../../../actualizador.js"></script>
+        <script src="actualizador.js"></script>
     </footer>
     
 </body>
